# gram-php

./: .gitignore  CMakeLists.txt  README.md  main.cpp
example/: .gitignore  composer.json  grammar.bnf  phpunit.xml
example/calculator/: .gitignore  LoggingListener.php  composer.json  phpunit.xml
example/calculator/src/: Calculator.php
example/calculator/test/: CalculatorTest.php
example/calculator/test/src/: CalculatorTest.php
example/grammar/: arr_filter.bnf  array_helper.bnf  calculator.bnf
example/src/SantaFeTrail/: Ant.php  Grid.php  Point.php  Trail.php
example/src/SantaFeTrail/Direction/: Direction.php  DownDirection.php  LeftDirection.php  RightDirection.php  UpDirection.php
example/test/: LoggingListener.php
example/test/src/: ArrFilterTest.php  ArrayHelperTest.php  CalculatorTest.php
example/test/src/SantaFeTrail/: BrainTest.php
include/: CommandLine.h  DiffCalculator.h  PhpLiteral.h  PhpType.h  PhpUnitEvaluator.h
include/gram-php/: DiffCalculator.h  PhpLiteral.h  PhpSerializer.h  PhpType.h  PhpUnitEvaluator.h  PhpUnserializer.h
resource/: grammar.bnf
src/: CMakeLists.txt  CommandLine.cpp  DiffCalculator.cpp  PhpLiteral.cpp  PhpSerializer.cpp  PhpType.cpp  PhpUnitEvaluator.cpp  PhpUnserializer.cpp  main.cpp
test/: CMakeLists.txt  diff_calculator_test.cpp  php_serializer_test.cpp  php_unserializer_test.cpp  test.cpp
